--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@
 image: maven:3.8.3-openjdk-17
 
 variables:
-  MAVEN_CLI_OPTS: "-DskipUiTests=true"
+  MAVEN_CLI_OPTS: "-DskipTests=true"
 
 stages:
   - build
