--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>tdt4140.icebreaker</groupId>
-	<artifactId>server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
-
-	<name>icebreaker</name>
-	<description>Icebreaker Spring Boot server</description>
 
 	<parent>
 		<!-- Parent POM for Spring Boot projects -->
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.5</version>
+		<version>3.2.2</version>
 		<relativePath/>
 	</parent>
+
+	<groupId>tdt4140.group23</groupId>
+	<artifactId>icebreaker</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<name>icebreaker</name>
+	<description>Icebreaker Spring Boot server</description>
 
 	<properties>
 		<!-- Java version and encoding -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 
 		<!-- Dependencies versions -->
 		<mysql.version>8.3.0</mysql.version>
 		<junit.version>5.8.1</junit.version>
-		<!-- <spring-security-version>6.1.5</spring-security-version> -->
 		<com.puppycrawl.tools.version>10.3.4</com.puppycrawl.tools.version>
+		<jjwt-api.version>0.11.5</jjwt-api.version>
+		<jjwt-impl.version>0.11.5</jjwt-impl.version>
+		<jjwt-jackson.version>0.11.5</jjwt-jackson.version>
 
 		<!-- Plugin versions -->
 		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
@@ -43,12 +44,10 @@
 
 	<dependencies>
 
-
 		<!-- Spring Boot dependencies -->
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
 		<dependency>
@@ -57,35 +56,53 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Spring Security dependencies -->
-		<!-- <dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency> -->
-
-		<!-- Thymeleaf for server-side rendering -->
-		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency> -->
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 
-		<!-- JPA for database integration -->
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency> -->
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<!-- JWT dependencies -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>${jjwt-api.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>${jjwt-impl.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>${jjwt-jackson.version}</version>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!-- MySQL connector for database integration -->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<version>${mysql.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 
 	</dependencies>
@@ -93,7 +110,7 @@
 	<build>
 		<plugins>
 
-			<!-- Spring Boot plugin for running the server -->
+			<!-- Spring Boot Maven plugin for running the server -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -125,7 +142,7 @@
 
 					<!-- Use the google checks -->
 					<configLocation>google_checks.xml</configLocation>
-					
+
 					<!-- Warnings are not treated as errors -->
 					<consoleOutput>false</consoleOutput>
 
@@ -187,8 +204,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
 		</plugins>
 	</build>
-
 </project>
