Resolve "Endpoints for rating functionality"

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
 
-# Server Properties
+# Server properties
 server.port=8080
 
-# App Properties
+# JWT configuration
 icebreaker.app.jwtSecret= ======================JWTIcebreakerSecret===========================
 icebreaker.app.jwtExpirationMs=86400000
